# vigilant-octo-doodle

./: .gitignore  README.md  main.py  main.ui  py_tale.py  pyproject.toml  requirements.txt  whispertesting.py
