[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
speechrecognition = "^3.10.4"
asyncio = "^3.4.3"
datetime = "^5.5"
pyqt5-qt5 = "5.15.2"
pyqt5 = "^5.15.11"
websockets = "^13.0"
pyqt5-sip = "^12.15.0"
pytz = "^2024.1"
requests = "^2.32.3"
zope-interface = "^7.0.1"
qasync = "^0.27.1"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
